# umbim

./: .gitignore  CMakeLists.txt  cli.c  mbim-dev.c  mbim-dev.h  mbim-enum.c  mbim-enums.h  mbim-msg.c  mbim-msg.h  mbim-type.h  mbim.h
data/: mbim-service-proxy-control.h
